feat: make style items selectable, add styles for roadmap

--- a/Resources/Private/Templates/ContentElements/Roadmap.html
+++ b/Resources/Private/Templates/ContentElements/Roadmap.html
@@ -1,7 +1,7 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
-<div class="roadmap roadmap--style-{data.flexform_style}">
+<div class="roadmap roadmap--style-{data.style}">
     <f:for each="{children_11}" as="element" iteration="i">
 
         <div class="grid-x">
